# 26-wuren-yangyuting

./: .gitignore  README.md  net.py  push_to_github.sh  test.py  upload_github.sh
cmake作业/: CMakeLists.txt  README.md
cmake作业/common/kalman/: CMakeLists.txt
cmake作业/common/math/: CMakeLists.txt
cmake作业/modules/A1/: CMakeLists.txt
cmake作业/modules/A2/: CMakeLists.txt
cmake作业/modules/M2/: CMakeLists.txt
homework1/: homework2-1.sh
homework1/linux_practice/docs/: daily_report.txt
homework2/: .gitignore
homework2/作业1/: README.md  visualize_ga.py
homework2/作业1/openGA/: Makefile  run_tests.py
homework2/作业1/openGA/assist/: index.html  main.js  styles.css
homework2/作业1/openGA/ci-test-cases/: various-mo-dtlz2.cpp  various-so-rastrigin.cpp
homework2/作业1/openGA/src/: openGA.hpp
homework2/作业2/: 01_多元线性回归.ipynb  02_正则化回归.ipynb  linear_regression.cpp  prepare_data.py  ridge_regression.cpp
homework2/作业2/data/: pred_linear.csv  pred_ridge.csv  test.csv  train.csv
homework2/作业3/: iris_svm.py
homework2/作业4/: Kmeans_Exp.ipynb
ros2_case/: README.md
ros2_case/src/param_case_package/: CMakeLists.txt  package.xml  ros2_launch_common_usage.md
ros2_case/src/topic_case_package/: CMakeLists.txt  package.xml  topic_node_templates.md
ros2_homework_advanced/: README.md  README_作业完成报告.md
ros2_homework_advanced/result/: .gitkeep
ros2_homework_advanced/src/cone_visualizer_package/: CMakeLists.txt  package.xml
ros2_homework_advanced/src/cone_visualizer_package/config/: cone_visualizer.rviz
ros2_homework_advanced/src/cone_visualizer_package/launch/: cone_visualizer.launch.py
ros2_homework_advanced/src/cone_visualizer_package/src/: abc.cpp
ros2_homework_basic/: README.md
ros2_homework_basic/config/: yyt.yaml
ros2_homework_basic/src/ros2_homework_basic_package/: CMakeLists.txt  package.xml
作业1/: README.md
作业2/: 01_多元线性回归.ipynb  02_正则化回归.ipynb  README.md  linear_regression.cpp  ridge_regression.cpp
作业4/: Kmeans_Exp.ipynb  README.md
(+20 files in other folders)
